# wgpu_fluid

./: Cargo.toml  readme.md
src/: camera.rs  instance.rs  main.rs  mesh.rs  particle.rs  resources.rs  shader.wgsl  state.rs  texture.rs
