[package]
name = "wgpu_fluid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.2"
log = "0.4"
tobj = "3.2"
winit = "0.27"
rand = "0.8"
rand_distr = "0.4"
wgpu = {version = "0.16" }
# wgpu = {version = "0.16", features = ["vulkan-portability", "angle"] }
# update once merged: https://github.com/fintelia/smaa-rs/pull/10
smaa = {git = "https://github.com/bschwind/smaa-rs.git", branch = "update-deps"}
# smaa = "0.9"
arcball = "1.1"
