[package]
name = "wgpu_fluid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
pollster = "0.2"
log = "0.4"
tobj = "3.2"
winit = "0.27"
rand = "0.8"
rand_distr = "0.4"
wgpu = "0.16"
smaa = "0.10"
# ndarray = "0.15"
# ndarray-linalg = {version = "0.16", features = ["intel-mkl-system"]}
nalgebra = "0.32"
